44
================

24/03/21 Permit inserts via sql interface to sensitive tables/columns
24/03/21 Configurable PDF zoom level via CSS
24/03/21 When deduplicating, validate that mobile phone contains digits
24/03/21 Allow voucher codes to be searched via global search
23/03/21 Update browser build targets for babel (minimum for CSP2)
23/03/21 Retire "remember me" due to potential security issues #982
23/03/21 Drop IE11 support
22/03/21 Choose from address book on bulk emails #968
22/03/21 Add extra incident animal keys and animal/incident jurisdiction #983
22/03/21 Online form: support additional fields for other records #986
22/03/21 Pick up areas where email auditing is missing #639
21/03/21 Update Hebrew translation (Saggi Neumann)
21/03/21 Update Spanish translation (Marga Gomis)
20/03/21 Strip potentially harmful tags before PDFising documents
19/03/21 Prevent hash tampering at SQL interface
19/03/21 Separate icon for locked/signed #985
19/03/21 Make Content-Security-Policy a sitedef instead
19/03/21 Fix bug in location filters cancelling each other on animal open
18/03/21 Leaking chooser destructors on medical screens
18/03/21 Lazy load changelog on about screen
18/03/21 Remove img.onerror inline code in favour of event delegate
18/03/21 Python 3 bug in HTML publish/image scaling
16/03/21 Add CSP and other security headers
16/03/21 Update moment.js to 2.29.1 (regex security flaw)
13/03/21 Hash stored online form submissions #974
12/03/21 CardCom Payment Gateway support (Saggi Neumann) #972
12/03/21 Microchip token for incident linked animals in doc templates
11/03/21 Unified solution for disabling autocomplete/autofill
26/02/21 Include expires on vaccinations wordkey
25/02/21 Last movement and last fosterer keys for querybuilder #271
25/02/21 Person last movement #271
24/02/21 Stop fosterers being placed into the owner field
19/02/21 Squash nulls when exporting as CSV
14/02/21 Separate transport time wordkeys